# land-intel-core

./: .dockerignore  .env.example  .env.netlify.example  .env.production.example  .gitignore  AGENTS.md  DEPLOY.md  OPERATIONS.md  README.md  alembic.ini  docker-compose.yml  london_land_intelligence_implementation_spec_v1 (2).md  pyproject.toml
.playwright-cli/: page-2026-04-16T10-59-19-932Z.yml  page-2026-04-16T10-59-40-739Z.yml  page-2026-04-16T11-08-10-960Z.yml  page-2026-04-16T11-09-11-902Z.yml
docs/: README.md  USAGE.md  testing-coverage-matrix.md
scripts/: backup_storage.sh  deploy_prod.sh  setup_local.sh  smoke_prod.sh
services/: __init__.py
tests/: conftest.py  test_api.py  test_api_route_negative_branches.py  test_assessment_valuation_tail_phase8a.py  test_assessments_phase5a.py  test_assessments_tail_wave3_phase8a.py  test_auth_visibility_phase8a.py  test_backend_tail_wave4_phase8a.py  test_controls_phase8a.py  test_dense_service_tail_wave5_phase8a.py  test_evidence_tail_wave4_phase8a.py  test_feature_build_tail_wave4_phase8a.py  test_geometry_listings_monitoring_tail_phase8a.py  test_geometry_listings_monitoring_tail_wave6_phase8a.py  test_jobs_and_listings_slice_phase8a.py  test_listings_phase1a.py  test_monitoring_listing_tail_wave3_phase8a.py  test_parsing_tail_wave4_phase8a.py  test_phase8a_bidwells_source.py  test_phase8a_final_coverage_gate.py  test_phase8a_ideal_land_sitemap_backfill.py  test_phase8a_ideal_land_source.py  test_phase8a_launch_readiness_remediation.py  test_phase8a_live_source_fit.py  test_phase8a_official_refresh.py  test_phase8a_official_source_helpers.py  test_phase8a_real_data_helper_coverage.py  test_phase8a_real_data_launch.py  test_phase8a_real_data_launch_runtime.py  test_phase8a_real_source_backend.py  test_phase8a_savills_source.py  test_planning_historical_tail_phase8a.py  test_planning_phase3a.py  test_planning_review_scenarios_tail_phase8a.py  test_planning_review_scoring_readback_tail_wave6_phase8a.py  test_planning_scenarios_review_coverage_phase8a.py  (+25 more)
(+266 files in other folders)
