[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landintel-core"
version = "0.1.0"
description = "London-first land intelligence platform monorepo skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "apscheduler>=3.10,<4.0",
  "beautifulsoup4>=4.12,<5.0",
  "cloudscraper>=1.2,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "orjson>=3.10,<4.0",
  "openpyxl>=3.1,<4.0",
  "pyproj>=3.6,<4.0",
  "pymupdf>=1.24,<2.0",
  "prometheus-client>=0.20,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.2,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "sentry-sdk>=2.0,<3.0",
  "shapely>=2.0,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "respx>=0.21,<1.0",
  "ruff>=0.6,<1.0",
  "pytest-cov>=5.0,<6.0",
]
document = []
ml = [
  "scikit-learn>=1.5,<2.0",
]
worker-geo = [
  "geopandas>=1.0,<2.0",
  "pyogrio>=0.9,<1.0",
]
browser = [
  "playwright>=1.47,<2.0",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["landintel*"]

[tool.coverage.run]
disable_warnings = ["module-not-measured"]

[tool.pytest.ini_options]
pythonpath = ["python", "."]
testpaths = ["tests"]
addopts = [
  "--cov=landintel",
  "--cov=services",
  "--cov-branch",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=100",
]
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]
